# Datahub-Sentinal

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  quality_checks.yml
.github/actions/pr-impact-analysis/: Dockerfile  README.md  action.yml  entrypoint.sh
.github/workflows/: ci.yml  demo-self-check.yml
config/: severity_rules.yml
deploy/k8s/: DESIGN.md
deploy/k8s/manifests/: example-sentineldeployment.yaml  sentineldeployment-crd.yaml
docs/: demo_video_script.md
examples/: enrichment_proposal_sample.json  incident_sample.json  migration_pr_diff_sample.patch  ml_blast_radius_report_sample.md  pr_comment_sample.md  quality_report_sample.md
seed/: seed_datahub.py
seed/sample_repo/models/: customer_revenue_summary.datahub.yml  customer_revenue_summary.sql  orders_v1.datahub.yml  orders_v1.sql  orders_v2.datahub.yml  orders_v2.sql
skills/datahub-incident-guard/: SKILL.md
src/sentinel/: cli.py
src/sentinel/agents/metadata_enrichment/: enricher.py
src/sentinel/agents/migration_copilot/: codegen.py  orchestrator.py  planner.py  pr_writer.py  tracker.py
src/sentinel/agents/ml_blast_radius/: checker.py
src/sentinel/agents/pr_impact/: analyzer.py  (+3 more)
src/sentinel/core/: blast_radius.py  config.py  datahub_client.py  incident_engine.py  models.py  proposal_engine.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/core/: test_blast_radius.py  test_config.py  test_datahub_client.py  test_incident_engine.py  test_models.py  test_proposal_engine.py
(+20 files in other folders)
