[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datahub-sentinel"
version = "0.1.0"
description = "Agents that sit in the places where data actually breaks and write outcomes back into DataHub."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "DataHub Sentinel Contributors" }]

dependencies = [
    "acryl-datahub>=0.15.0",
    "mcp-server-datahub>=0.4.0",
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "typer>=0.12.0",
    "anthropic>=0.40.0",
    "PyYAML>=6.0.1",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
sentinel = "sentinel.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
packages = ["sentinel.core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: requires a live docker-composed DataHub instance (RUN_INTEGRATION_TESTS=1)",
]
